# music21-tools

./: .gitignore  .project  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
audioSearchDemos/: graphicalInterfaceGame.py  graphicalInterfaceSF.py  humanVScomputer.py  omrfollow.py  repetitionGame.py
bhadley/: __init__.py  harmonyRealizer.py  nips2011.py
bhadley/mrjobaws/: __init__.py  awsutility.py  featureExtractorMRJOB.py
chant/: chant.py
choraleTools/: mnum_fixer.py
composition/: __init__.py  arvo.py  aug30.py  fadeChord1.py  phasing.py  seeger.py
contour/: contour.py
counterpoint/: __init__.py  species.py
featureExtraction/: ismir2011.py
misc/: eschbeg.py  gatherAccidentals.py  monteverdi.py
music21_tools/: __init__.py
music21_tools/audioSearchDemos/: __init__.py  graphicalInterfaceGame.py  graphicalInterfaceSF.py  humanVScomputer.py  omrfollow.py  repetitionGame.py
music21_tools/bhadley/: __init__.py  harmonyRealizer.py  nips2011.py
music21_tools/chant/: chant.py
music21_tools/choraleTools/: mnum_fixer.py
music21_tools/composition/: __init__.py  arvo.py  aug30.py  fadeChord1.py  phasing.py  seeger.py
music21_tools/contour/: contour.py
music21_tools/counterpoint/: __init__.py  species.py
music21_tools/featureExtraction/: ismir2011.py
music21_tools/josquin/: __init__.py  label_intervals.py
music21_tools/midi/: build_melody.py
music21_tools/misc/: eschbeg.py  gatherAccidentals.py  monteverdi.py
music21_tools/theory/: mgtaPart1.py  mgtaPart2.py
music21_tools/theoryAnalysis/: __init__.py  theoryAnalyzer.py  theoryResult.py  wwnortonMGTA.py
music21_tools/trecento/: __init__.py  _base.py  cadenceProbabilities.py  cadencebook.py  capua.py  exceldiff.py  findSevs.py  findTrecentoFragments.py  find_vatican1790.py  largestAmbitus.py  medren.py  notation.py  polyphonicSnippet.py  quodJactatur.py  runTrecentoCadence.py  tonality.py  trecentoCadence.py
publications/: icmc2010.py  icmc2011.py  ismir2010.py  misc2010.py  seaverOct2009.py  seaver_presentation_2008.py  smt2010.py  smt2011.py
theory/: mgtaPart1.py  mgtaPart2.py
theoryAnalysis/: __init__.py  theoryAnalyzer.py  theoryResult.py  wwnortonMGTA.py
tools/: exceldiff.py
trecento/: __init__.py  cadenceProbabilities.py  cadencebook.py  capua.py  exceldiff.py  findSevs.py  findTrecentoFragments.py  find_vatican1790.py  largestAmbitus.py  medren.py  notation.py  polyphonicSnippet.py  quodJactatur.py  runTrecentoCadence.py  tonality.py  trecentoCadence.py
webapps/: __init__.py  apps.py  commands.py  templates.py
ycac/: __init__.py  parseYcacCsv.py
