[build-system]
requires = [
    "hatchling>=1.8.1",
]
build-backend = "hatchling.build"

[project]
name = "music21-tools"
version = "10.1.2"
description = "Demonstrations and tools for music21."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

dependencies = [
    "music21>=10",
    "xlrd",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[[project.authors]]
name = "Michael Scott Asato Cuthbert"
email = "michael.asato.cuthbert@gmail.com"

[project.urls]
Homepage = "https://github.com/cuthbertLab/music21-tools"

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["music21_tools"]

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
