[build-system]
requires = [
    "hatchling>=1.8.1",
]
build-backend = "hatchling.build"

[project]
name = "music21-tools"
version = "10.2.0"
description = "Demonstrations and tools for music21."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

dependencies = [
    "music21>=10",
    "xlrd",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[[project.authors]]
name = "Michael Scott Asato Cuthbert"
email = "michael.asato.cuthbert@gmail.com"

[project.urls]
Homepage = "https://github.com/cuthbertLab/music21-tools"

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ['music21_tools']

[tool.pytest.ini_options]
doctest_optionflags = ['NORMALIZE_WHITESPACE', 'ELLIPSIS']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Flake8, pycodestyle, flake8-quotes + pyflakes (mirrors music21's house style)
select = ['E', 'W', 'Q', 'F', 'B']
dummy-variable-rgx = '^(_.*|unused.*|i|j|counter|junk|dummy)'
ignore = [
    'E227',  # space around | -- nice to omit in int|str
    'E301',  # 0 blank lines
    'E302',  # blank lines -- expected 2 blank lines
    'E303',  # too many blank lines
    'E731',  # assignment to lambda
    'B904',  # raise-from
    'B905',  # zip without strict=
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'single'
docstring-quotes = 'single'
